--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "@lottiefiles/react-lottie-player": "^3.5.0",
     "clsx": "^2.0.0",
     "framer-motion": "^9.0.3",
-    "next": "^13.5.3",
+    "next": "^15.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.6",
     "@iconify/react": "^4.0.1",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "biome": "^0.2.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
