--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-  "name": "company-homepage-template",
-  "version": "1.0.0",
-  "description": "A modern, responsive homepage template for companies and businesses built with Next.js and Tailwind CSS",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "format": "biome format . --write",
-    "format:check": "biome format . --check",
-    "lint": "biome lint .",
-    "lint:fix": "biome lint . --apply"
-  },
-  "dependencies": {
-    "@lottiefiles/react-lottie-player": "^3.5.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^9.0.3",
-    "next": "^15.4.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.34.3",
-    "tailwind-merge": "^2.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.0.6",
-    "@iconify/react": "^4.0.1",
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "biome": "^0.2.2",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
-  },
-  "packageManager": "yarn@4.9.0"
+	"name": "company-homepage-template",
+	"version": "1.0.0",
+	"description": "A modern, responsive homepage template for companies and businesses built with Next.js and Tailwind CSS",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome format . --write",
+		"format:check": "biome format . --check",
+		"lint": "biome lint .",
+		"lint:fix": "biome lint . --apply"
+	},
+	"dependencies": {
+		"@lottiefiles/react-lottie-player": "^3.5.0",
+		"clsx": "^2.0.0",
+		"framer-motion": "^9.0.3",
+		"next": "^15.4.5",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"sharp": "^0.34.3",
+		"tailwind-merge": "^2.0.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.1.3",
+		"@iconify/react": "^4.0.1",
+		"@types/node": "18.11.3",
+		"@types/react": "18.0.21",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.12",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.1",
+		"typescript": "4.8.4"
+	},
+	"packageManager": "yarn@4.9.0"
 }
